# sysDetector

./: .gitignore  CHANGELOG.md  README.md  package.json
.github/workflows/: release.yml
docs/zh/: CHANGELOG-zh.md  README-ZH.md
src/: CMakeLists.txt  install.py  uninstall.py
src/misc/: CMakeLists.txt  service.sh  sysDetector-fs.service  sysDetector-proc.service  sysDetector.service
src/selftest/: README.md  run.sh
src/selftest/fs/: run.sh
src/selftest/proc/: run.sh
src/selftest/proc/fixtures/: selftest.conf
src/selftest/proc/tests/: build.sh  config.sh  runtime-events.sh
src/sysDetector-cli/: Cargo.toml
src/sysDetector-cli/src/: args.rs  main.rs
src/sysDetector-ebpf/: Makefile  README.md  common.c  common.h  proc  proc.bpf.c  proc.c  proc.h  sysDetector-monitor.service
src/sysDetector-ebpf/configs/fs/: README.md  example.conf
src/sysDetector-ebpf/configs/proc/: README.md  example.conf  sysDetector-proc.config
src/sysDetector-ebpf/fs/: fs.c
src/sysDetector-ebpf/proc/: Makefile  proc  proc.bpf.c  proc.c
src/sysDetector-server/: Cargo.toml
src/sysDetector-server/src/: args.rs  ebpf.rs  main.rs  rpc.rs
