[package]
name = "sysDetector-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio  = { version = "1.0", features = ["full"] }
log    = { version = "0.4" }
clap   = { version = "3.2", features = ["cargo", "derive"] }
anyhow = { version = "1.0" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
